[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Enemies/enemy3/5.png" type="Texture" id=1]
[ext_resource path="res://Src/Enemies/Enemy3.gd" type="Script" id=2]
[ext_resource path="res://Assets/Enemies/enemy3/3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/11.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/enemy3/2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/enemy3/4.png" type="Texture" id=6]
[ext_resource path="res://Src/Mechs/FireParti.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 5.96799

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "death",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=5]

[node name="Enemy3" type="KinematicBody2D" groups=[
"Enemies",
]]
scale = Vector2( 1.5, 1.5 )
collision_layer = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0.875 )
shape = SubResource( 1 )

[node name="DeathSfx" type="AudioStreamPlayer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "run"
frame = 1
playing = true
flip_h = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 44.6667, 1.33333 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 5 )

[node name="FireParti" parent="." instance=ExtResource( 7 )]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 4, -3.33333 )
rotation = 0.0
gravity = Vector2( 0, -20 )
scale_amount = 6.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
